# Challenges

./: .gitignore  README.md
Binary search tree/: A.bst  BST.qbs  CMakeLists.txt  README.md  main.c
Binary search tree/BST/: BST.c  BST.h  BST_File.c  BST_File.h  BST_Show.c  BST_Show.h  BST_Show_config.h  BST_config.h
Elevator/: README.md  graph.dot
Elevator/Elevator/: Elevator.qbs  elevator.cpp  elevator.h  main.cpp  widget.cpp  widget.h  widget.ui
Elevator/Elevator3floors/: main.cpp  widget.ui
Elevator/Elevator9floors/: elevator.cpp  elevator.h  main.cpp  widget.cpp  widget.ui
